--- a/views/store.html
+++ b/views/store.html
@@ -41,10 +41,12 @@
             <ul>
                 <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
                 <li><a href="sign_In.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
-
-                <li><img class="icon" src="../img/empty_Shopping_Cart.svg" alt=""></li>
             </ul>
         </section>
+
+            <label for="cart" class="cartShop">
+                <img class="cartIcon" src="../img/empty_Shopping_Cart.svg" alt=""></li>
+            </label>
 
             <input id="whishListSide" type="checkbox">
             <label for="whishListSide" class="whishHeadLine">
@@ -163,59 +165,20 @@
             </article>
         </section>
 
-        <!-- <section class="cart">
-            <article class="menuFilterSide">
-                <input id="filterSide" type="checkbox">
-                <label for="filterSide" class="headLine">
-                    <div class="filter">
-                        <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterWrord">Filter</p>                      </label>
-                    </div>
+        <!-- Cart -->
+
+        <section class="sectionShop">
+            <input id="cart" type="checkbox">
+            <label for="cart" class="cartShop">
+            </label>
+
+            <nav class="menuCart">
+                <label for="cart" class="cartShop">
+                    <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                 </label>
-                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
-                </p>
-                <nav class="menuFilter">
-                    <label for="filterSide">
-                        <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
-                    </label>
-                    <div class="choiceFilter">
-                        <h3 class="filterWord">Filter</h3>
-                        <div class="sectionAvailability">
-                            <h3 class="titleAvailability">Availability</h3>
-                            <article class="availability">
-                                <div>
-                                    <label for="inStock" class=""></label>
-                                    <input type="checkbox" id="inStock">In-stock
-                                </div>
-                                <div>
-                                <label for="newArrivals" class=""></label>
-                                    <input type="checkbox" id="newArrivals">New Arrivals
-                                </div>
-                                <div>
-                                    <label for="soldOut" class=""></label>
-                                    <input type="checkbox"  id="soldOut">Sold-out
-                                </div>
-                            </article>
-                        </div>
-                        <div class="sectionPricing">
-                            <h3 class="titlePricing">Pricing</h3>
-                            <article class="pricing">
-                                <div><label for="priceOne" class=""></label>
-                                    <input type="checkbox" id="priceOne">$499
-                                </div>
-                                <div><label for="priceTwo" class=""></label>
-                                    <input type="checkbox" id="priceTwo">$599
-                                </div>
-                                <div><label for="priceThree" class=""></label>
-                                    <input type="checkbox" id="priceThree">$999
-                                </div>
-                            </article>
-                        </div>
-                        <input class="btnFilter" type="submit" placeholder="Filter">
-                    </div>
-                </nav>
-            </article>
-        </section> -->
+            </nav>
+
+        </section>
 
         <!-- WhishList -->
 
@@ -274,7 +237,7 @@
                     <dic class="article">
                         <img src="../img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -284,7 +247,7 @@
                     <dic class="article">
                         <img src="../img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -294,7 +257,7 @@
                     <dic class="article">
                         <img src="../img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -314,7 +277,7 @@
                     <dic class="article">
                         <img src="../img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -326,7 +289,7 @@
                     <dic class="article">
                         <img src="../img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -336,7 +299,7 @@
                     <dic class="article">
                         <img src="../img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -346,7 +309,7 @@
                     <dic class="article">
                         <img src="../img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -356,7 +319,7 @@
                     <dic class="article">
                         <img src="../img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -366,7 +329,7 @@
                     <dic class="article">
                         <img src="../img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -378,7 +341,7 @@
                     <dic class="article">
                         <img src="../img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -388,7 +351,7 @@
                     <dic class="article">
                         <img src="../img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -398,7 +361,7 @@
                     <dic class="article">
                         <img src="../img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -408,7 +371,7 @@
                     <dic class="article">
                         <img src="../img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -418,7 +381,7 @@
                     <dic class="article">
                         <img src="../img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -430,7 +393,7 @@
                     <dic class="article">
                         <img src="../img/pic23.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -440,7 +403,7 @@
                     <dic class="article">
                         <img src="../img/pic28.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -450,7 +413,7 @@
                     <dic class="article">
                         <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -460,7 +423,7 @@
                     <dic class="article">
                         <img src="../img/pic33.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -470,7 +433,7 @@
                     <dic class="article">
                         <img src="../img/pic30.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -482,7 +445,7 @@
                     <dic class="article">
                         <img src="../img/pic20.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -492,7 +455,7 @@
                     <dic class="article">
                         <img src="../img/pic17.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -502,7 +465,7 @@
                     <dic class="article">
                         <img src="../img/pic36.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -512,7 +475,7 @@
                     <dic class="article">
                         <img src="../img/pic35.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -522,7 +485,7 @@
                     <dic class="article">
                         <img src="../img/pic34.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
