--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -251,6 +251,35 @@
             }
         }
     }
+
+    .sectionShop{
+        .menuCart{
+            width:30vw;
+            height: 100vh;
+            display:flex;
+            position: fixed;
+            top:0;
+            right:0;
+            z-index: 10px;
+            flex-direction: column;
+            justify-content:flex-start;
+            align-items: flex-start;
+            background-color: #ffffff;
+            overflow: hidden;
+            box-shadow: 0 0 10px 6px #070707;
+            z-index: 10;
+            padding-top: 60px;
+            transform: translate(-100%);
+            transition: .3s ease-in-out;
+
+        }
+
+    }
+
+
+
+
+
     .sectionWhishList{
         width:25vw;
         height: 100vh;
@@ -266,10 +295,9 @@
         overflow: hidden;
         box-shadow: 0 0 10px 6px #070707;
         z-index: 10;
-        transform: translate(0%);
         padding-top: 60px;
+        transform: translate(100%);
         transition: .3s ease-in-out;
-
         .whishHeadLine{
             .closeCross{
                 width:15px;
@@ -285,7 +313,6 @@
             }
 
         }
-
         .menuWhishList{
             .choiceWhishList{
                 width: 80%;
