--- a/views/store.html
+++ b/views/store.html
@@ -167,7 +167,7 @@
 
         <!-- Cart -->
 
-        <section class="sectionShop">
+        <!-- <section class="sectionShop">
             <input id="cart" type="checkbox">
             <label for="cart" class="cartShop">
             </label>
@@ -178,7 +178,7 @@
                 </label>
             </nav>
 
-        </section>
+        </section> -->
 
         <!-- WhishList -->
 
