Fix heartItem Store Category

--- a/views/store.html
+++ b/views/store.html
@@ -267,7 +267,7 @@
                     <dic class="article">
                         <img src="../img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="../img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="store.html" class="linkStore">Add to cart</a>
                         </div>
