Creating signIn & createTo Account

--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -77,7 +77,38 @@
     <!-- Main -->
 
     <main class="mainContainer">
+        <section class="sectionCreatAccount">
+            <form action="" class="formCreateAccount">
+                <div class="col-lg-6 col-sm-12 form">
+                    <article class="form-floating">
+                        <label for="floatingInput">First name</label>
+                        <input type="text" class="mb-3 formControl" id="floatingInput" placeholder="Enter your first name">
+                    </article>
+                    <article class="form-floating">
+                        <label for="floatingInput">Last name</label>
+                        <input type="text" class="mb-3 formControl" id="floatingInput" placeholder="Enter your last name">
+                    </article>
+                    <article class="form-floating">
+                        <label for="floatingInput">Email</label>
+                        <input type="email" class="mb-3 formControl" id="floatingInput" placeholder="Enter your email">
+                    </article>
+                    <article class="form-floating">
+                        <label for="floatingPassword">Password</label>
+                        <input type="password" class="mb-0 formControl" id="floatingPassword" placeholder="Enter your email password">
+                    </article>
 
+                    <input class="btnCreate" type="Create">
+
+                    <article class="ctaToSignIn">
+                        <p>Do you have an account with us</p>
+                        <a href="sign_In.html" class="toSignIn">Sign in</a>
+                    </article>
+
+                </div>
+
+
+
+            </form>
 
     </main>
 
