--- a/views/sign_In.html
+++ b/views/sign_In.html
@@ -78,6 +78,32 @@
 
     <main class="mainContainer">
 
+        <section class="sectionsignIn">
+            <form action="" class="formSignIn">
+                <div class="col-lg-6 col-sm-12 form">
+
+                    <article class="form-floating">
+                        <label for="floatingInput">Email  address</label>
+                        <input type="email" class="mb-3 formControl" id="floatingInput" placeholder="Email">
+                    </article>
+                    <article class="form-floating">
+                        <label for="floatingPassword">Password</label>
+                        <input type="password" class="mb-0 formControl" id="floatingPassword" placeholder="Password">
+                    </article>
+
+                    <article class="ctaToCreateAcount">
+                        <input class="btnSignIn" type="Sign In">
+                        <a href="create_Account.html" class="toCreateAccount">Create account</a>
+                    </article>
+
+                </div>
+
+
+
+
+            </form>
+        </section>
+
 
     </main>
 
