--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -77,6 +77,9 @@
     <!-- Main -->
 
     <main class="mainContainer">
+
+        <!-- Create Account -->
+
         <section class="sectionCreatAccount">
             <form action="" class="formCreateAccount">
                 <div class="col-lg-6 col-sm-12 form">
@@ -96,19 +99,14 @@
                         <label for="floatingPassword">Password</label>
                         <input type="password" class="mb-0 formControl" id="floatingPassword" placeholder="Enter your email password">
                     </article>
-
                     <input class="btnCreate" type="Create">
-
                     <article class="ctaToSignIn">
                         <p>Do you have an account with us</p>
                         <a href="sign_In.html" class="toSignIn">Sign in</a>
                     </article>
-
                 </div>
-
-
-
             </form>
+        </section>
 
     </main>
 
