--- a/views/sign_In.html
+++ b/views/sign_In.html
@@ -78,32 +78,26 @@
 
     <main class="mainContainer">
 
-        <section class="sectionsignIn">
+        <!-- Sign In -->
+
+        <section class="sectionSignIn">
             <form action="" class="formSignIn">
                 <div class="col-lg-6 col-sm-12 form">
-
                     <article class="form-floating">
-                        <label for="floatingInput">Email  address</label>
-                        <input type="email" class="mb-3 formControl" id="floatingInput" placeholder="Email">
+                        <label class="email" floatingInput"></label>Email address
+                        <input type="email" class="formControl input" id="floatingInput" placeholder="Email">
                     </article>
                     <article class="form-floating">
-                        <label for="floatingPassword">Password</label>
-                        <input type="password" class="mb-0 formControl" id="floatingPassword" placeholder="Password">
+                        <label class="password" floatingPassword"></label>Password
+                        <input type="password" class="formControl input" id="floatingPassword" placeholder="Password">
                     </article>
-
                     <article class="ctaToCreateAcount">
-                        <input class="btnSignIn" type="Sign In">
-                        <a href="create_Account.html" class="toCreateAccount">Create account</a>
+                        <input class="btnSignIn" type="Submit">
+                        <a class="toCreateAccount" href="create_Account.html">Create account</a>
                     </article>
-
                 </div>
-
-
-
-
             </form>
         </section>
-
 
     </main>
 
