--- a/views/sign_In.html
+++ b/views/sign_In.html
@@ -81,6 +81,7 @@
         <!-- Sign In -->
 
         <section class="sectionSignIn">
+            <h2 class="titleSignIn">Welcome back</h2>
             <form action="" class="formSignIn">
                 <div class="col-lg-6 col-sm-12 form">
                     <article class="form-floating">
