--- a/scss/_sign_In.scss
+++ b/scss/_sign_In.scss
@@ -1,20 +1,29 @@
 .sectionSignIn{
     width: 100%;
     height: auto;
-    background-image:url(../img/background_Signin.webp) ;
+    background-image: linear-gradient(#bc23286e, #00000085), url(../img/background_Signin.webp);
     background-position: top center;
     background-repeat:no-repeat ;
     background-size: cover ;
     background-attachment: fixed;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    .titleSignIn{
+        color: #f8f8f8;
+        filter: drop-shadow(4px 4px 8px #000000 );
+        font-size: 4rem;
+        font-weight: 600;
+        font-family: $fontJura;
+        margin-top: 200px;
+    }
     .formSignIn{
         width: 40vw;
         height: auto;
         background-color: #ffffff;
         box-shadow: 4px 4px 8px 0px #5c5c5c;
-        margin-top:200px;
+        margin-top:30px;
         margin-bottom:200px;
         .form{
             max-width: fit-content;
@@ -61,17 +70,27 @@
                     height: 50px;
                     color: #ffffff;
                     background-color: #000000;
-                    font-size: 1.5rem;
-                    font-weight: 400;
+                    font-size: 1.2rem;
+                    font-weight: 600;
                     font-family: $fontJura;
                     margin: 80px auto 30px;
                     padding: 40px auto;
+                    transition: all 0.3s ease;
+                    &:hover{
+                        color: #000000;
+                        background-color: #ffffff;
+                        border: 1px solid black;
+                    }
                 }
                 .toCreateAccount{
                     color: #000000;
                     font-size: 1rem;
                     font-weight: 400;
                     font-family: $fontJura;
+                    text-decoration: none;
+                    &:hover{
+                        text-decoration: underline;
+                    }
                 }
             }
         }
