--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -236,14 +236,13 @@
                         font-family: $fontJura;
                         font-weight: 600;
                         color: #ffffff;
-                        border: 0px solid transparent;
+                        border: 1px solid transparent;
                         background-color: #070707;
                         transition: all 0.3s ease;
                         &:hover{
                             color: #070707;
                             background-color: #ffffff;
-                            box-shadow: 0 0 4px 2px #707070;
-                            border: 0px solid transparent;
+                            border:1px solid #000000;
                             font-weight: 600;
                         }
                     }
