Creating Create Account

--- a/scss/_sign_In.scss
+++ b/scss/_sign_In.scss
@@ -59,7 +59,7 @@
             .form-floating:nth-child(2){
                 margin-top: 50px;
             }
-            .ctaToCreateAcount{
+            .ctaToSignIn{
                 width:100%;
                 display: flex;
                 flex-direction: column;
