--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -80,27 +80,29 @@
 
         <!-- Create Account -->
 
-        <section class="sectionCreatAccount">
+        <section class="sectionCreateAccount">
+            <h2 class="titleCreateAccount">Create account</h2>
             <form action="" class="formCreateAccount">
                 <div class="col-lg-6 col-sm-12 form">
                     <article class="form-floating">
                         <label for="floatingInput">First name</label>
-                        <input type="text" class="mb-3 formControl" id="floatingInput" placeholder="Enter your first name">
+                        <input type="text" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your first name">
                     </article>
                     <article class="form-floating">
                         <label for="floatingInput">Last name</label>
-                        <input type="text" class="mb-3 formControl" id="floatingInput" placeholder="Enter your last name">
+                        <input type="text" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your last name">
                     </article>
                     <article class="form-floating">
                         <label for="floatingInput">Email</label>
-                        <input type="email" class="mb-3 formControl" id="floatingInput" placeholder="Enter your email">
+                        <input type="email" class="mb-3 formControl input" id="floatingInput" placeholder="Enter your email">
                     </article>
                     <article class="form-floating">
                         <label for="floatingPassword">Password</label>
-                        <input type="password" class="mb-0 formControl" id="floatingPassword" placeholder="Enter your email password">
+                        <input type="password" class="mb-0 formControl input" id="floatingPassword" placeholder="Enter your email password">
                     </article>
-                    <input class="btnCreate" type="Create">
-                    <article class="ctaToSignIn">
+
+                    <article class="ctaToCreateAccount">
+                        <input class="btnCreate" type="Create">
                         <p>Do you have an account with us</p>
                         <a href="sign_In.html" class="toSignIn">Sign in</a>
                     </article>
@@ -111,7 +113,7 @@
     </main>
 
     <!-- Footer -->
-
+<!--
     <footer class="footerContainer">
         <div class="footer">
             <section class="socialMedia">
@@ -141,7 +143,7 @@
                 <p> Medellin - Colombia</p>
             </div>
         </section>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap -->
 
