--- a/views/sign_In.html
+++ b/views/sign_In.html
@@ -92,7 +92,7 @@
                         <label class="password" floatingPassword"></label>Password
                         <input type="password" class="formControl input" id="floatingPassword" placeholder="Password">
                     </article>
-                    <article class="ctaToCreateAcount">
+                    <article class="ctaToSignIn">
                         <input class="btnSignIn" type="Submit">
                         <a class="toCreateAccount" href="create_Account.html">Create account</a>
                     </article>
