--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,111 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding-top: 100px;
 }
 
+.sectionCreateAccount {
+  width: 100%;
+  height: auto;
+  background-image: linear-gradient(rgba(188, 35, 40, 0.431372549), rgba(0, 0, 0, 0.5215686275)), url(../img/background_Create.webp);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sectionCreateAccount .titleCreateAccount {
+  color: #f8f8f8;
+  filter: drop-shadow(4px 4px 8px #000000);
+  font-size: 4rem;
+  font-weight: 600;
+  font-family: "Jura", sans-serif;
+  margin-top: 200px;
+}
+.sectionCreateAccount .formCreateAccount {
+  width: 40vw;
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: 4px 4px 8px 0px #5c5c5c;
+  margin-top: 30px;
+  margin-bottom: 200px;
+}
+.sectionCreateAccount .formCreateAccount .form {
+  max-width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 80px auto;
+}
+.sectionCreateAccount .formCreateAccount .form .form-floating {
+  color: #000000;
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: "Jura", sans-serif;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px auto;
+}
+.sectionCreateAccount .formCreateAccount .form .form-floating .input {
+  width: 100%;
+  height: 40px;
+  color: #000000;
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-family: "Jura", sans-serif;
+  margin-top: 20px;
+  padding: 20px 0px 20px 10px;
+  border-top: transparent;
+  border-right: transparent;
+  border-left: transparent;
+  border-bottom: 1px solid #9c9c9c;
+}
+.sectionCreateAccount .formCreateAccount .form .form-floating:nth-child(2) {
+  margin-top: 50px;
+}
+.sectionCreateAccount .formCreateAccount .form .form-floating:nth-child(3) {
+  margin-top: 50px;
+}
+.sectionCreateAccount .formCreateAccount .form .form-floating:nth-child(4) {
+  margin-top: 50px;
+}
+.sectionCreateAccount .formCreateAccount .form .ctaToCreateAccount {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sectionCreateAccount .formCreateAccount .form .ctaToCreateAccount .btnCreateAccount {
+  width: inherit;
+  height: 50px;
+  color: #ffffff;
+  background-color: #000000;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: "Jura", sans-serif;
+  margin: 80px auto 30px;
+  padding: 40px auto;
+  transition: all 0.3s ease;
+}
+.sectionCreateAccount .formCreateAccount .form .ctaToCreateAccount .btnCreateAccount:hover {
+  color: #000000;
+  background-color: #ffffff;
+  border: 1px solid black;
+}
+.sectionCreateAccount .formCreateAccount .form .ctaToCreateAccount .toCreateAccount {
+  color: #000000;
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: "Jura", sans-serif;
+  text-decoration: none;
+}
+.sectionCreateAccount .formCreateAccount .form .ctaToCreateAccount .toCreateAccount:hover {
+  text-decoration: underline;
+}
+
 .getOff {
   width: 100%;
   height: 100%;
@@ -1986,14 +2091,14 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .sectionSignIn .formSignIn .form .form-floating:nth-child(2) {
   margin-top: 50px;
 }
-.sectionSignIn .formSignIn .form .ctaToCreateAcount {
+.sectionSignIn .formSignIn .form .ctaToSignIn {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.sectionSignIn .formSignIn .form .ctaToCreateAcount .btnSignIn {
+.sectionSignIn .formSignIn .form .ctaToSignIn .btnSignIn {
   width: inherit;
   height: 50px;
   color: #ffffff;
@@ -2005,19 +2110,19 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding: 40px auto;
   transition: all 0.3s ease;
 }
-.sectionSignIn .formSignIn .form .ctaToCreateAcount .btnSignIn:hover {
+.sectionSignIn .formSignIn .form .ctaToSignIn .btnSignIn:hover {
   color: #000000;
   background-color: #ffffff;
   border: 1px solid black;
 }
-.sectionSignIn .formSignIn .form .ctaToCreateAcount .toCreateAccount {
+.sectionSignIn .formSignIn .form .ctaToSignIn .toCreateAccount {
   color: #000000;
   font-size: 1rem;
   font-weight: 400;
   font-family: "Jura", sans-serif;
   text-decoration: none;
 }
-.sectionSignIn .formSignIn .form .ctaToCreateAcount .toCreateAccount:hover {
+.sectionSignIn .formSignIn .form .ctaToSignIn .toCreateAccount:hover {
   text-decoration: underline;
 }
 
